# space-shooter

./: .gitignore  CMakeLists.txt
SpaceShooter/: CMakeLists.txt
SpaceShooter/include/framework/: Application.hpp
SpaceShooter/src/: main.cpp
SpaceShooter/src/framework/: Application.cpp
SpaceShooterEngine/: CMakeLists.txt
SpaceShooterEngine/include/: EntryPoint.hpp
SpaceShooterEngine/include/framework/: Actor.hpp  Application.hpp  AssetManager.hpp  Core.hpp  Delegate.hpp  MathUtility.hpp  Object.hpp  PhysicsSystem.hpp  World.hpp
SpaceShooterEngine/src/: EntryPoint.cpp
SpaceShooterEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp
SpaceShooterGame/: CMakeLists.txt  config.hpp.in
SpaceShooterGame/include/: config.hpp
SpaceShooterGame/include/gameFramework/: GameApplication.hpp
SpaceShooterGame/include/gameplay/: HealthComponent.hpp
SpaceShooterGame/include/player/: PlayerSpaceship.hpp
SpaceShooterGame/include/spaceship/: Spaceship.hpp
SpaceShooterGame/include/weapon/: Bullet.hpp  BulletShooter.hpp  Shooter.hpp
SpaceShooterGame/src/gameFramework/: GameApplication.cpp
SpaceShooterGame/src/gameplay/: HealthComponent.cpp
SpaceShooterGame/src/player/: PlayerSpaceship.cpp
SpaceShooterGame/src/spaceship/: Spaceship.cpp
SpaceShooterGame/src/weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
